--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Boberick the llama</title>
+        <title>Sarah Chieng</title>
         <link rel="stylesheet" href="bootstrap.min.css">
     </head>
     <body>
