--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
         </header>
         <main>
             <section id="Personal Blog">
-                
+                <div class="section-inner">
+                    <h2>Contact me</h2>
+                    <p>You can find me on:</p>
+                    <ul>
+                        <li><a href="https://twitter.com/llama">Youtube</a></li>
+                        <li><a href="https://www.reddit.com/user/llama">Instagram</a></li>
+                        <li><a href="https://www.instagram.com/llamasporfavor/">LinkedIn</a></li>
+                    </ul>
+                    <p>Or, you can <a href="mailto:sarahchieng2001@gmail.com">send me an email</a>.</p>
+                </div>
             </section>
             <section id="Youtube">
                 
