--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
         <title>Sarah Chieng</title>
         <link rel="stylesheet" href="bootstrap.min.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
-            
+           Sarah Chieng  
         </header>
         <main>
             <section id= "Intro">
