--- a/index.html
+++ b/index.html
@@ -6,19 +6,14 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header>
-           Sarah Chieng  
-        </header>
         <main>
             <section id= "Intro">
-                <div class="section-inner">
+                <div class="title">
                     <h2>Sarah Chieng</h2>
                     <p>Welcome to my website :)</p>
                 </div>
-            </section>
 
-            <section id= "Learn More">
-                <div class="section-inner">
+                <div class="title">
                     <h2>Learn More</h2>
                     <p>You can learn more about me and what I'm working on:</p>
                     <ul>
@@ -28,10 +23,8 @@
                     </ul>
                 </div>
                 </div>
-            </section>
 
-            <section id= "Socials">
-                <div class="section-inner">
+                <div class="title">
                     <h2>Socials</h2>
                     <p></p>
                     <ul>
