--- a/index.html
+++ b/index.html
@@ -7,15 +7,12 @@
     </head>
     <body>
         <main>
-            <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-                <h1>Sarah Chieng</h2>
-            </nav>
-
             <section id= "Intro">
                 <div class="title">
                     <h1>Sarah Chieng</h2>
                     <p>Welcome to my website :)</p>
-
+                </div>
+                <div class="title">
                     <h2>Learn More</h2>
                     <p>You can learn more about me and what I'm working on:</p>
                     <ul>
