--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Sarah Chieng</title>
         <link rel="stylesheet" href="bootstrap.min.css">
-        
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <main>
