--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
                     <h1>Sarah Chieng</h2>
                     <p>Welcome to my website :)</p>
                 </div>
+            </section>
+            <section id= "Middle">
                 <div class="title">
                     <h2>Learn More</h2>
                     <p>You can learn more about me and what I'm working on:</p>
