--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                         <li><a href="https://www.youtube.com/c/SarahChieng">Youtube Channel</a></li>
                         <li><a href="https://www.instagram.com/llamasporfavor/">LinkedIn</a></li>
                     </ul>
-
+                </div>
+                <div class="title">        
                     <h2>Socials</h2>
                     <ul>
                         <li><a href="https://instagram.com/milksandmatcha">Instagram</a></li>
