finished first draft

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <body>
         <main>
             <section id= "Intro">
-                <div class="title">
+                <div>
                     <h1>Sarah Chieng</h2>
-                    <p>Welcome to my website :)</p>
+                    <p>Welcome, scroll down :)</p>
                 </div>
             </section>
-            <section id= "Middle">
-                <div class="title">
+
+            <section id= "Learn">
+                <div>
                     <h2>Learn More</h2>
                     <p>You can learn more about me and what I'm working on:</p>
                     <ul>
@@ -22,11 +23,13 @@
                         <li><a href="https://www.youtube.com/c/SarahChieng">Youtube Channel</a></li>
                         <li><a href="https://www.instagram.com/llamasporfavor/">LinkedIn</a></li>
                     </ul>
-                </div>
-                <div class="title">        
+                <div id = "stupid">
+                </div>     
                     <h2>Socials</h2>
+                    <p>Check out my social media :)</p>
                     <ul>
                         <li><a href="https://instagram.com/milksandmatcha">Instagram</a></li>
+                        <li><a href="https://open.spotify.com/user/sarah_chieng">Spotify</a></li>
                     </ul>
                     <p>Or, you can <a href="mailto:sarahchieng2001@gmail.com">send me an email</a>.</p>
                 </div>
