--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <title>Sarah Chieng</title>
         <link rel="stylesheet" href="bootstrap.min.css">
         <link rel="stylesheet" href="style.css">
+
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, 
+            shrink-to-fit=no, maximum-scale=1.5, user-scalable=yes">
     </head>
     <body>
         <main>
