--- a/index.html
+++ b/index.html
@@ -17,6 +17,26 @@
                 </div>
             </section>
 
+            <section id= "About">
+                <div>
+                    <h1>About Me</h2>
+                    <p>My name is Sarah Chieng, a 2nd year at MIT.</p>
+                    <p>In my free time, I like to ice skate,</p>
+                    <video width="320" height="240" controls>
+                        <source src="skating.mov" type="video/mov">
+                      Your browser does not support the video tag.
+                      </video>
+                    <p>And sometimes, I like to paint, </p>
+                    <img src="painting.jpg" alt="my painting">
+                </div>
+                <div>
+                    <p> And make youtube videos! (recent video)</p>
+                    <iframe width="315" height="236"
+                        src="https://www.youtube.com/watch?v=AfYukhVlTU0">
+                    </iframe>
+                </div>
+            </section>
+
             <section id= "Learn">
                 <div>
                     <h2>Learn More</h2>
@@ -29,7 +49,7 @@
                 <div id = "stupid">
                 </div>     
                     <h2>Socials</h2>
-                    <p>Check out my social media :)</p>
+                    <p>Find me on social media :)</p>
                     <ul>
                         <li><a href="https://instagram.com/milksandmatcha">Instagram</a></li>
                         <li><a href="https://open.spotify.com/user/sarah_chieng">Spotify</a></li>
